# ops-health-core

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FORMULAS.md  INTEGRATION_GUIDE.md  RELEASE_NOTES_0.1.1.md
ops_health_core/: __init__.py  cli.py  contracts.py  integration.py  kill_switch.py  model.py  scorer.py  version.py  windows.py
tests/: test_contract_compat.py  test_fail_closed_on_exception.py  test_health_score.py  test_integration_helpers.py  test_invariant_0_domain_agnosticism.py  test_invariant_2_no_cross_core_imports.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_ops_formulas_drift.py  test_invariant_schema_pin_minor_2.py  test_invariant_version_single_source.py  test_kill_switch.py  test_latency_window_pruning.py  test_pkg_1_no_examples_packaged.py  test_sliding_window.py
